--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.1",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "firebase": "^10.12.2",
     "html2canvas": "^1.4.1",
