--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,8 @@
   ],
   "env": {
     "NODE_ENV": "production",
-    "GENERATE_SOURCEMAP": "false"
+    "GENERATE_SOURCEMAP": "false",
+    "REACT_APP_API_URL": "https://your-backend-url.railway.app"
   },
   "headers": [
     {
