Fix Render deployment path issue with root entry point and updated configuration

--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "tinytots-daycare-system",
   "version": "1.0.0",
   "description": "Daycare Management and Sales System",
-  "main": "server/index.js",
+  "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "build": "npm install && cd server && npm install",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm run dev",
     "client": "cd client && npm start",
     "client:test": "cd client && set PORT=4000 && npm start",
     "dev:two": "concurrently \"npm run server\" \"npm run client\" \"npm run client:test\"",
     "seed:users": "node server/scripts/seed-users.js",
-    "build": "cd client && npm run build:prod",
     "build:client": "cd client && npm run build:prod",
     "build:server": "cd server && npm run start:prod",
     "start:prod": "concurrently \"npm run build:client\" \"npm run build:server\"",
-    "start": "cd server && npm start",
     "install-all": "npm install && cd server && npm install && cd ../client && npm install",
     "test": "npm run test:client && npm run test:server",
     "test:client": "cd client && npm run test:ci",
