--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "tinytots-client",
   "version": "1.0.0",
@@ -17,6 +16,7 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "firebase": "^10.12.2",
+    "fuse.js": "^7.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "razorpay": "^2.9.6",
