--- a/client/.env.example
+++ b/client/.env.example
@@ -7,3 +7,6 @@ REACT_APP_FIREBASE_APP_ID=1:933369529407:web:1832fa389bbd02d199248a
 
 # API Configuration
 REACT_APP_API_URL=http://localhost:5000/api
+
+# Google Maps API
+REACT_APP_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
