--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.14.20",
     "@mui/x-data-grid": "^6.18.3",
     "@mui/x-date-pickers": "^6.18.3",
+    "@react-google-maps/api": "^2.20.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.1",
