--- a/client/env.example
+++ b/client/env.example
@@ -4,6 +4,11 @@
 # API Configuration
 REACT_APP_API_URL=http://localhost:5000
 
+# Google Maps API Key (REQUIRED for Maps functionality)
+# Get your API key from: https://console.cloud.google.com/
+# Enable: Maps JavaScript API, Geocoding API, Directions API
+REACT_APP_GOOGLE_MAPS_API_KEY=YOUR_GOOGLE_MAPS_API_KEY_HERE
+
 # Firebase Configuration (Optional)
 REACT_APP_FIREBASE_API_KEY=your-firebase-api-key
 REACT_APP_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
