--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.10",
     "razorpay": "^2.9.6",
     "twilio": "^5.10.3",
